--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,9 +11,14 @@
 .navbar .navbar-collapse {
     text-align: center;
     margin-bottom: 0px;
+    
 }
 
-body { padding-top: 50px; height:100%; }
+.navbar-default {
+	background-color: #093145;
+}
+
+body { padding-top: 70px; }
 
 .logo-wrapper {
 	padding: 100px inherit;
@@ -22,14 +27,19 @@ body { padding-top: 50px; height:100%; }
 
 /* Profile container */
 .profile {
-  margin: 0px 0px 20px;
-  min-height:100%;
+  margin: 20px 0;
+  height:100%;
 }
+
+.blog-wrapper {
+	border-radius: 25px;
+}
+
 
 /* Profile sidebar */
 .profile-sidebar {
+	border-radius: 25px;
   padding: 20px 0 10px 0;
-  min-height:100%;
   background: #093145;
 }
 
