Reference nav layout

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "posts/nav" %>
+<%= render "layouts/nav" %>
 
 <!-- Adapted this sidebar theme from http://bootsnipp.com/snippets/featured/user-profile-sidebar -->
 <div class="container">
